--- a/sass/components/_media-kit.scss
+++ b/sass/components/_media-kit.scss
@@ -63,6 +63,7 @@ main#main-content #mini-panel-media_appearances {
 	th {
 		border: 1px none #C7BC8F;
 		border-top: 1px solid #C7BC8F;
+		border-bottom: 1px solid #C7BC8F;
 		background: transparent;
 
 		&:first-child {
@@ -91,7 +92,6 @@ main#main-content #mini-panel-media_appearances {
 	}
 	td {
 		border: 1px none #C7BC8F;
-		border-top: 1px solid #C7BC8F;
 		border-bottom: 1px solid #C7BC8F;
 
 		&:first-child {
